--- a/Mio/HTML's/Desk.html
+++ b/Mio/HTML's/Desk.html
@@ -333,7 +333,7 @@
             </header>
             <footer class="major">
                 <ul class="actions special">
-                    <a href="../../index.html" style="text-decoration:none">
+                    <a href="../../home.html" style="text-decoration:none">
                         <button class="btn btn-danger" type="button"><i class="fa fa-arrow-circle-left"></i> Salir
                         </button>
                     </a>
