--- a/Mio/HTMLs/Login.html
+++ b/Mio/HTMLs/Login.html
@@ -15,7 +15,7 @@
                 <header class="login__header">
                     <center><h2 style="color: black">Iniciar Sesion</h2></center>
                 </header>
-                <form class="login__form" action="../../Mio/HTML's/Ingresar.php" method="post">
+                <form class="login__form" action="../../Mio/HTMLs/Ingresar.php" method="post">
                     <div>
                         <center><label style="color: black">Usuario</label></center>
                     </div>
